# mediaencoder-macos

.github/workflows/: build-mediaencoder.yml
MediaEncoder/: CMakeLists.txt
MediaEncoder/include/: AudioCodec.h  AudioFrame.h  MediaEncoder.h  MediaEncoder_c_api.h  MediaWriter.h  PixelFormat.h  Resampler.h  SampleFormat.h  Scaler.h  VideoCodec.h  VideoFrame.h
MediaEncoder/src/: AudioFrame.cpp  MediaEncoder.cpp  MediaEncoder_c_api.cpp  MediaWriter.cpp  Resampler.cpp  Scaler.cpp  VideoFrame.cpp
